--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ colores{
 }
 
 .main{
-    background-color: #1351F2;
+    background-color: #2F90EB;
     height: auto;
 }
 .main__section{
@@ -88,16 +88,38 @@ colores{
     background-image: url('../img/transformadores2.jpg');
 }
 
-.form__contacto{
-    height: 500px;
+.form__p{
+    text-align: center;
+    padding: 1rem;
+    font-size: 1.2rem;
 }
-.fields{
+.form__contacto{
+    height: 700px;
+    background-color: #2F90EB;
+}
+.formulario{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    margin: 3rem 14rem 0 14rem;
+    background-color: #B7DDFF;
+    border-radius: 20px 20px;
+    padding: 2rem 0 3rem 0;
+}
+.form__radio{
+    display: flex;
+}
+.label__radio{
+    margin-left: 1rem;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+.btn__radio{
+    margin-left: 1rem;
 }
 .field{
     display: flex;
     flex-direction: column;
+    margin-top: 2rem;
 }
 .half label{
     color: #1C21DB;
@@ -107,36 +129,41 @@ colores{
     letter-spacing: 2px;
 }
 .half input{
-    background-color: #664cab;
+    background-color: #5d99f3;
     border: solid 1px rgba(255, 255, 255, 0.15);
     padding: 1em;
-    width: 300px;
+    width: 500px;
     border-radius: 5px 5px;
     margin-left: 0.5em;
 }
 .half textarea{
-    background-color: #664cab;
+    background-color: #5d99f3;
     border: solid 1px #ffffff26;
     padding: 1em;
     margin-left: 0.5em;
-    width: 300%;
+    width: 500px;
     border-radius: 5px 5px;
 }
+.actions__form{
+    margin: 2rem 0 0 1rem;
+}
 .container__button{
+    background-color: #5d99f3;
     text-decoration: none;
     text-align: center;
-    padding: 1.9em;
+    padding: 1.2em;
     border: 1px solid #b6aad7;
-    border-radius: 30px;
+    border-radius: 20px;
     width: 150px;
-    margin-left: 5em;
+    margin-top: 1rem;
     font-size: 0.6em;
-    color: whitesmoke;
+    color: #1C21DB;
     letter-spacing: 2px;
     text-transform: uppercase;
+    font-weight: bold;
 }
-.container__button--form{
-    margin: 0px 0px 0px 0px;
+.container__button:hover{
+    background-color: #B7DDFF;
 }
 
 .footer{
