--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ colores{
     color: #1C21DB;
     color: #1351F2;
     color: #2F90EB;
+    color: #b6aad7;
+    color: #f5f5f5;
 }
 .header{
     background-image: url('../img/cabecerainstalaciones.jpg');
@@ -58,6 +60,9 @@ colores{
     text-transform: uppercase;
     color: rgb(247, 241, 241);
 }
+.fa-cart-arrow-down{
+    color: rgb(247, 241, 241);
+}
 
 .main{
     background-color: #2F90EB;
@@ -92,9 +97,11 @@ colores{
     text-align: center;
     padding: 1rem;
     font-size: 1.2rem;
+    color: #f0f8ff;
+    letter-spacing: 1px;
 }
 .form__contacto{
-    height: 700px;
+    height: 780px;
     background-color: #2F90EB;
 }
 .formulario{
@@ -112,6 +119,7 @@ colores{
     margin-left: 1rem;
     font-size: 1.2em;
     font-weight: bold;
+    letter-spacing: 2px;
 }
 .btn__radio{
     margin-left: 1rem;
@@ -135,6 +143,9 @@ colores{
     width: 500px;
     border-radius: 5px 5px;
     margin-left: 0.5em;
+    color: #f0f8ff;
+    letter-spacing: 1px;
+    font-size: 1rem;
 }
 .half textarea{
     background-color: #5d99f3;
@@ -143,6 +154,9 @@ colores{
     margin-left: 0.5em;
     width: 500px;
     border-radius: 5px 5px;
+    color: #f0f8ff;
+    letter-spacing: 1px;
+    font-size: 1rem;
 }
 .actions__form{
     margin: 2rem 0 0 1rem;
